--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rest-express",
+  "name": "eth-forwarder-fullstack",
   "version": "1.0.0",
   "type": "module",
   "license": "MIT",
@@ -8,7 +8,10 @@
     "build": "tsx script/build.ts",
     "start": "NODE_ENV=production node dist/index.cjs",
     "check": "tsc",
-    "db:push": "drizzle-kit push"
+    "db:push": "drizzle-kit push",
+    "compile": "npx hardhat compile",
+    "deploy:mainnet": "npx hardhat run scripts/deploy.js --network mainnet",
+    "deploy:ankr": "npx hardhat run scripts/deploy.js --network ankr"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
@@ -99,7 +102,10 @@
     "tailwindcss": "^3.4.17",
     "tsx": "^4.20.5",
     "typescript": "5.6.3",
-    "vite": "^7.3.0"
+    "vite": "^7.3.0",
+    "hardhat": "^2.20.0",
+    "@nomicfoundation/hardhat-toolbox": "^3.0.0",
+    "dotenv": "^16.0.0"
   },
   "overrides": {
     "drizzle-kit": {
